@@ -1,0 +1,45 @@
+package OSCAR::PrereqsDefs;
+
+#
+# Copyright (c) 2008-2009 Geoffroy Vallee <valleegr@ornl.gov>
+#                         Oak Ridge National Laboratory
+#                         All rights reserved.
+#
+#   This program is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the Free Software
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+# This package provides a set of functions for the management of system
+# services.
+#
+
+#
+# $Id$
+#
+
+use strict;
+use base qw(Exporter);
+
+use constant PREREQ_INSTALLED   => 1;
+use constant PREREQ_MISSING     => 0;
+
+my @ISA = qw(Exporter);
+
+our @EXPORT = qw (
+                PREREQ_INSTALLED
+                PREREQ_MISSING
+                 );
+
+1;
+
+
