@@ -13,6 +13,7 @@ oscar-base packages.
 - [Ticket #398] We can now check whether the binary packages specified for the
 creation of a image are actually available or not. For that, one just needs to
 use the "oscar --distro <DISTRO_ID> --check-packagelist <FILE>" command.
+- Clean-up the prereq management and the bootstrapping mechanisms.
 
 6.0.2:
 - Fix the oscar_image_cleanup script.
